Blender Crashes when Camera Tracking #39446

Closed
opened 2014-03-27 02:57:21 +01:00 by sgomezlemos · 32 comments
sgomezlemos commented 2014-03-27 02:57:21 +01:00 (Migrated from localhost:3001)

System Information
Macbook Pro Retina 15" GT750M

Blender Version
Broken: (2.70)

Camera.blend

Camera Tracking Crashes

**I have tried to make this tutorial from blender guru and blender crashes when trying to track

http://www.blenderguru.com/videos/introduction-to-camera-tracking/**

**System Information** Macbook Pro Retina 15" GT750M **Blender Version** Broken: (2.70) [Camera.blend](https://archive.blender.org/developer/F82808/Camera.blend) **Camera Tracking Crashes** **I have tried to make this tutorial from blender guru and blender crashes when trying to track http://www.blenderguru.com/videos/introduction-to-camera-tracking/**
sgomezlemos commented 2014-03-27 02:57:21 +01:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
sgomezlemos commented 2014-03-27 02:57:21 +01:00 (Migrated from localhost:3001)
Author

Added subscriber: @sgomezlemos

Added subscriber: @sgomezlemos

Added subscriber: @willi-2

Added subscriber: @willi-2

I can not reproduce the problem. I've downloaded the blend file and the video file, started tracking by pressing Ctrl+T, and Blender starts tracking until frame 79 without crashing.
Win 7/64, Blender 2.70

I can not reproduce the problem. I've downloaded the blend file and the video file, started tracking by pressing Ctrl+T, and Blender starts tracking until frame 79 without crashing. Win 7/64, Blender 2.70

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

No crash here either.
Macbook Pro (Late 2013), Blender 7397ef8.

Loaded the footage from blender guru site and tracked all the markers in the scene. Please try a new build from builder.blender.org.

No crash here either. Macbook Pro (Late 2013), Blender 7397ef8. Loaded the footage from blender guru site and tracked all the markers in the scene. Please try a new build from builder.blender.org.

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

Crash confirmed. It crashes on random frames when trying to track the markers.

Crash confirmed. It crashes on random frames when trying to track the markers.

Added subscriber: @Sergey

Added subscriber: @Sergey

Can not reproduce on linux. Could be something platform or ffmpeg-version specific. Anyone to catch the backtrace?

Can not reproduce on linux. Could be something platform or ffmpeg-version specific. Anyone to catch the backtrace?

Added subscriber: @soderlind

Added subscriber: @soderlind

It crashed for me too, but I had to select and track all markers. I changed the markers to match keyframe and it did not crash. I also tried from scratch with only the video and when I set markers to match keyframe it worked fine but if I set markers to match to previous frame it would crash. The same thing happened on some other videos I tried but suddenly I could not reproduce it anymore and even Camera.blend worked fine every time, even if I restarted Blender. I restarted the computer and tried again and Camera.blend crashed first time I tracked it, but then it worked again and I could not reproduce it anymore until I restarted the computer again.

It feels like setting marker to match previous frame has something to do with this but I'm not sure.

One time it didn't crash but one or two video-frames changed size to thumbnail size and video was only in the lower left corner on those frames. I have never seen that happen before.

System Information
Windows 7 64-bit, 16GB RAM, i7-4770 CPU using Intel HD Graphics 4600

It crashed for me too, but I had to select and track all markers. I changed the markers to match keyframe and it did not crash. I also tried from scratch with only the video and when I set markers to match keyframe it worked fine but if I set markers to match to previous frame it would crash. The same thing happened on some other videos I tried but suddenly I could not reproduce it anymore and even Camera.blend worked fine every time, even if I restarted Blender. I restarted the computer and tried again and Camera.blend crashed first time I tracked it, but then it worked again and I could not reproduce it anymore until I restarted the computer again. It feels like setting marker to match previous frame has something to do with this but I'm not sure. One time it didn't crash but one or two video-frames changed size to thumbnail size and video was only in the lower left corner on those frames. I have never seen that happen before. System Information Windows 7 64-bit, 16GB RAM, i7-4770 CPU using Intel HD Graphics 4600
Member

Added subscriber: @beta-tester

Added subscriber: @beta-tester
Member

it crashes also on my computer... (it remembers me very well to this issue #38281)
Windows 8.1 x64,

if found a Camera.crash.txt in my temp folder:
Blender 2.70 (sub 0), Commit date: 2014-03-19 05:02, Hash 19e627c
bpy.ops.clip.select_all(action='TOGGLE') # Operator
bpy.ops.clip.select_all(action='TOGGLE') # Operator

(i can not test the most recent blender build bot version because of missing dll - issue #39495)

EDIT: maybe i should tell, to me, the issue #38281 is solved - also for blender 2.70.

EDIT2: i just run blender with option "blender.exe -d -con 1>log1.txt 2>log2.txt" and i got some
Memoryblock free: attempt to free illegal pointer
messages on the error console.

starting blender with "blender.exe --debug --debug-all 1>log1.txt 2>log2.txt" the tracking of all selected markers run through up to the end.
but if i run the blender with all debug options but without "--debug_events --debug_ffmpeg" like
"blender.exe --debug --debug-handlers --debug-libmv --debug-memory --debug-jobs --debug-python --debug-depsgraph --debug-wm -con 1>log1.txt 2>log2.txt"
, blender crashs again.
blender_logs_(crash).zip

BTW: the video is shorter then the timeline. during tracking, when the end of video i reached, the tracking process slows down and tracks the active markers in some directions - even there is no video input to track anymore.

it crashes also on my computer... (it remembers me very well to this issue #38281) Windows 8.1 x64, if found a Camera.crash.txt in my temp folder: Blender 2.70 (sub 0), Commit date: 2014-03-19 05:02, Hash 19e627c bpy.ops.clip.select_all(action='TOGGLE') # Operator bpy.ops.clip.select_all(action='TOGGLE') # Operator (i can not test the most recent blender build bot version because of missing dll - issue #39495) EDIT: maybe i should tell, to me, the issue #38281 is solved - also for blender 2.70. EDIT2: i just run blender with option "blender.exe -d -con 1>log1.txt 2>log2.txt" and i got some Memoryblock free: attempt to free illegal pointer messages on the error console. starting blender with "blender.exe --debug --debug-all 1>log1.txt 2>log2.txt" the tracking of all selected markers run through up to the end. but if i run the blender with all debug options but without "--debug_events --debug_ffmpeg" like "blender.exe --debug --debug-handlers --debug-libmv --debug-memory --debug-jobs --debug-python --debug-depsgraph --debug-wm -con 1>log1.txt 2>log2.txt" , blender crashs again. [blender_logs_(crash).zip](https://archive.blender.org/developer/F83461/blender_logs__crash_.zip) BTW: the video is shorter then the timeline. during tracking, when the end of video i reached, the tracking process slows down and tracks the active markers in some directions - even there is no video input to track anymore.
Member

i just switched to ubuntu 13 and "blender-2.70-b64bdb2-linux-glibc211-x86_64.tar.bz2" here i have other strange behaviours.

  1. randomly, at tracking time, the picture of the video disappears and come back again - and many or all active tracks gone lost (switched to inactive)
  2. randomly, blender run through up to the end (luckily - yippie ya yay).
  3. randomly, blender freeze at the point of frame 218 and can not be stopped normally (sudo kill -9 ...)
  4. randomly, blender crash Issue_T39446_ubuntu.zip (includes backtrace)

two different computers, similar harware, different OS, similar issue.
system1: CPU i7-3770, RAM 16GB, GPU AMD HD 5760
os1: Windows 8.1 x64, blender-2.70-release

system2: CPU i7-3770, RAM 16GB, GPU i7-3770 GPU on CPU
os2.1: Windows 8.1 x64, blender-2.70-release
os2.2: ubuntu 13.x x64, blender-2.70-b64bdb2-linux-glibc211-x86_64.tar.bz2

i just switched to ubuntu 13 and "blender-2.70-b64bdb2-linux-glibc211-x86_64.tar.bz2" here i have other strange behaviours. 1. randomly, at tracking time, the picture of the video disappears and come back again - and many or all active tracks gone lost (switched to inactive) 2. randomly, blender run through up to the end (luckily - yippie ya yay). 3. randomly, blender freeze at the point of frame 218 and can not be stopped normally (sudo kill -9 ...) 4. randomly, blender crash [Issue_T39446_ubuntu.zip](https://archive.blender.org/developer/F83464/Issue_T39446_ubuntu.zip) (includes backtrace) two different computers, similar harware, different OS, similar issue. system1: CPU i7-3770, RAM 16GB, GPU AMD HD 5760 os1: Windows 8.1 x64, blender-2.70-release system2: CPU i7-3770, RAM 16GB, GPU i7-3770 GPU on CPU os2.1: Windows 8.1 x64, blender-2.70-release os2.2: ubuntu 13.x x64, blender-2.70-b64bdb2-linux-glibc211-x86_64.tar.bz2

@beta-tester, are you able to compile a debug build and get a full backtrace of all threads on linux?

@beta-tester, are you able to compile a debug build and get a full backtrace of all threads on linux?
Member

@Sergey, i never tried to compile blender (either windows nor linux).
but i can run some debug builds, if somebody can provide me these debug builds.

EDIT²: compiler is still running, but it takes its time... i try it tomorrow to get a backtrace.

PS.: on the build instructions i changed the wiki-page... there was written "blender-svn". i changed it to "blender-git", hope that is ok.

@Sergey, i never tried to compile blender (either windows nor linux). but i can run some debug builds, if somebody can provide me these debug builds. EDIT²: compiler is still running, but it takes its time... i try it tomorrow to get a backtrace. PS.: on the build instructions i changed the wiki-page... there was written "blender-**svn**". i changed it to "blender-**git**", hope that is ok.

This time I was able to create a crash (on Win7/64). Looks like a multi-threading issue that is hard to reproduce. Maybe something's not 100% thread-safe. Selecting all markers just raises the probability. Though I had to make several attempts to create a crash.

Console output: "Couldn't unmap memory".

WinDbg shows a second chance exception 0xc0000005 (Access violation) at
blender!osl_closure_to_string+0x21d80: 00000001`41fd6b70 488b040a mov rax,qword ptr [rdx+rcx]

Stack trace is:

blender!osl_closure_to_string+0x21d80

blender+0x814d02
blender+0x8165bb
blender+0x656e60
blender+0x7772f7
blender+0x777798
blender+0x777ec3
VCOMP90!_vcomp::ParallelRegion::HandlerThreadFunc+0x1c2
VCOMP90!_vcomp::ParallelRegion::HandlerThreadFunc+0xbf
VCOMP90!_vcomp::TaskQueue::Enqueue+0xcf
kernel32!BaseThreadInitThunk+0xd
ntdll!RtlUserThreadStart+0x1d

This time I was able to create a crash (on Win7/64). Looks like a multi-threading issue that is hard to reproduce. Maybe something's not 100% thread-safe. Selecting all markers just raises the probability. Though I had to make several attempts to create a crash. Console output: "Couldn't unmap memory". WinDbg shows a second chance exception 0xc0000005 (Access violation) at blender!osl_closure_to_string+0x21d80: 00000001`41fd6b70 488b040a mov rax,qword ptr [rdx+rcx] Stack trace is: > blender!osl_closure_to_string+0x21d80 blender+0x814d02 blender+0x8165bb blender+0x656e60 blender+0x7772f7 blender+0x777798 blender+0x777ec3 VCOMP90!_vcomp::ParallelRegion::HandlerThreadFunc+0x1c2 VCOMP90!_vcomp::ParallelRegion::HandlerThreadFunc+0xbf VCOMP90!_vcomp::TaskQueue::Enqueue+0xcf kernel32!BaseThreadInitThunk+0xd ntdll!RtlUserThreadStart+0x1d
Member

i compiled blender with option BF_DEBUG=True, but i can not see any difference in the log / backtrace
Issue-T39446_ubuntu-debug.7z
maybe i made something wrong.

i compiled blender with option BF_DEBUG=True, but i can not see any difference in the log / backtrace [Issue-T39446_ubuntu-debug.7z](https://archive.blender.org/developer/F83609/Issue-T39446_ubuntu-debug.7z) maybe i made something wrong.
Member

i now used "gdb" to get some more detailed informations in backtrack.
issue-#39446-linux-gdb-debug.7z

PS.: take3 is an other crash, that happened where i tried to reopen the recent file (Camera.blend), while tracking was still in progress.

i hope you got now something you can work with

i now used "gdb" to get some more detailed informations in backtrack. [issue-#39446-linux-gdb-debug.7z](https://archive.blender.org/developer/F83624/issue-#39446-linux-gdb-debug.7z) PS.: **take3** is an other crash, that happened where i tried to reopen the recent file (Camera.blend), while tracking was still in progress. i hope you got now something you can work with

@beta-tester, please type 'thread apply all bt' in gdb once blender crashes. it'll give full backtrace for all threads.

@beta-tester, please type 'thread apply all bt' in gdb once blender crashes. it'll give full backtrace for all threads.

@beta-tester, ah in some logs i do see full backtrace. Will have a look.

@beta-tester, ah in some logs i do see full backtrace. Will have a look.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

I cant redo this on 64bit linux, tested debug builds with GCC, Release builds with GCC and Clang.

I cant redo this on 64bit linux, tested debug builds with GCC, Release builds with GCC and Clang.
Author

This issue was referenced by blender/blender-addons-contrib@ee72cba008

This issue was referenced by blender/blender-addons-contrib@ee72cba008829c0ae1bb21f952e180d54dd12f88
Author

This issue was referenced by ee72cba008

This issue was referenced by ee72cba008829c0ae1bb21f952e180d54dd12f88

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ee72cba008.

Closed by commit ee72cba008.
Member

i just recompiled blender (e95fd79) and there i can see an other backtrace:
issue-#39446-linux-gdb-debug2.7z

i just recompiled blender (e95fd79) and there i can see an other backtrace: [issue-#39446-linux-gdb-debug2.7z](https://archive.blender.org/developer/F83644/issue-#39446-linux-gdb-debug2.7z)
Member

looks good to me now. i tested build 62dc18c717 and it seems to be fixed now.
(and now the lightblue line on the bottom of the viewport - (cached frames?) - is now without gaps)

looks good to me now. i tested build 62dc18c717ea8c47c87e825b94a568486f93c452 and it seems to be fixed now. (and now the lightblue line on the bottom of the viewport - (cached frames?) - is now without gaps)

@beta-tester, i'm not sure is it something wrong with the cache line?

@beta-tester, i'm not sure is it something wrong with the cache line?
Member

@Sergey, no no no... its all fine.
(in the past not all frames where cached/where marked as cached while tracking. now i can see the light blue line is without gaps - i think it is good)

@Sergey, no no no... its all fine. (in the past not all frames where cached/where marked as cached while tracking. now i can see the light blue line is without gaps - i think it is good)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39446
No description provided.