source/blender/imbuf/intern/module.c
@@ -26,12 +26,17 @@
 
 
 #include <stddef.h>
+
+#include "BLI_utildefines.h"
+
+#include "IMB_allocimbuf.h"
 #include "IMB_imbuf.h"
 #include "IMB_filetype.h"
 #include "IMB_colormanagement_intern.h"
 
 void IMB_init(void)
 {
+	imb_refcounter_lock_init();
 	imb_filetypes_init();
 	imb_tile_cache_init();
 	colormanagement_init();
@@ -42,5 +47,6 @@ void IMB_exit(void)
 	imb_tile_cache_exit();
 	imb_filetypes_exit();
 	colormanagement_exit();
+	imb_refcounter_lock_exit();
 }
 
